BUGFIX: fix project #10's description being cut off

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ img {
 }
 ol li {
   padding:1%;
-  width: 110%
+  width: 100%
 }
 .ihs {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
